changed structure of Portfolio section of page

--- a/style.css
+++ b/style.css
@@ -84,26 +84,8 @@ p {
     background-color: #2589bd;
 }
 
-/* consolidated benefit class for the three sections to make it dry*/
-.benefit {
-    margin-bottom: 32px;
-    color: #ffffff;
 }
 
-/* consolidated benefit h3 class for the three sections to make it dry*/
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-/* consolidated benefit img class for the three sections to make it dry*/
-.benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/* consolidated body-background class for the three sections to make it dry*/
 .body-background {
     margin-bottom: 20px;
     padding: 50px;
@@ -113,12 +95,10 @@ p {
     color: #ffffff;
 }
 
-/* consolidated img class for the three sections to make it dry*/
 img {
     max-height: 200px;
 }
 
-/* consolidated h2 class for the three sections to make it dry*/
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -134,7 +114,9 @@ h2 {
     font-size: 20px;
 }
 
-
+.profile-photo {
+    box-sizing: border-box;    
+}
 
     /* For responsive layout - added media query for a 2 column layout instead of 4 column layout. */
 @media screen and (max-width: 900px) {
