--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 body {
-    background-color:black;
+    background-color: black;
+    color: snow;
 }
 
 .header {
@@ -18,6 +19,11 @@ body {
 .header h1 {
     display: inline-block;
     font-size: 48px;
+}
+
+.header h2 {
+    padding: 20px;
+    /* does this become redundant with the h2 part lower down this page??? */
 }
 
 
@@ -38,8 +44,11 @@ nav a {
 
 a {
     color:purple;
-    text-decoration: none;
+    /* text-decoration: none; not necessary? */
 }
+
+.project a
+
 
 p {
     font-size: 16px;
@@ -78,6 +87,8 @@ img {
 h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    color: purple;
+    text-align: center;
 }
 
 .footer {
@@ -87,11 +98,12 @@ h2 {
 }
 .footer h2 {
     font-size: 20px;
+    /* can this just become part of the h2 section? */
 }
 
 .profile-photo {
     box-sizing: border-box;  
-    align-items: center;  
+    /* align-items: center;  ????? */
 }
 
 .project {
@@ -103,6 +115,8 @@ h2 {
     transform: rotate(5deg);
     box-shadow: 10px 10px 5px #aaaaaa;
     margin: 20px;
+    text-align: center;
+    font-size: 20px;
   }
   
   .project a {
