--- a/style.css
+++ b/style.css
@@ -24,9 +24,7 @@ body {
 
 .header h2 {
     padding: 20px;
-    /* does this become redundant with the h2 part lower down this page??? */
 }
-
 
 .header div {
     padding-top: 15px;
@@ -113,16 +111,16 @@ h2 {
     text-align: center;
 }
 .footer h2 {
-    font-size: 20px;
+    font-size: 46px;
     /* can this just become part of the h2 section? */
 }
 
 .profile-photo {
     box-sizing: border-box;  
     float: left;
-    margin: 30px;
-    
-    /* align-items: center;  ????? */
+    margin: 20px;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 /* make this first application bigger */
