--- a/style.css
+++ b/style.css
@@ -14,16 +14,13 @@ body {
 .header {
     padding: 20px;
     background-color: lightblue;
-    color:seagreen;
+    color: purple;
+    text-align: center;
 }
 
 .header h1 {
     display: inline-block;
     font-size: 48px;
-}
-
-.header h2 {
-    padding: 20px;
 }
 
 .header div {
@@ -39,16 +36,13 @@ nav a {
     text-decoration: none;
     text-align: right;
     align-items: flex-end;
+    color: purple;
 }
 
-.nav-heading {
-    float: inline-end;
-    display: inline-block;
-    align-items: flex-end;
-}
-
-a {
-    color:purple;
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 #about-me {
@@ -57,25 +51,13 @@ a {
     justify-content: center;
 }
 
-.hero
-    
-
 .project a
 
 
 p {
-    font-size: 16px;
+    font-size: 10px;
     padding: 10px;
 }
-
-/* .hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-} */
 
 .float-left {
     float: left;
@@ -94,7 +76,7 @@ p {
 }
 
 img {
-    max-height: 400px;
+    max-height: 100px;
     align-items: center;
 }
 
@@ -125,7 +107,18 @@ h2 {
 
 /* make this first application bigger */
 .first-project {
-    flex: 2 1 200px
+    flex: 2 1 200px;
+    max-height: 200px;
+}
+
+
+.projects {
+    flex: 1;
+    background-color: snow);
+    padding: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .project {
@@ -134,22 +127,27 @@ h2 {
     border-radius: 50px;
     padding: 10px;
     flex: 1 0 200px;
-    box-shadow: 10px 10px 5px #aaaaaa;
+    box-shadow: 10px 10px 5px grey;
     margin: 20px;
     text-align: center;
     font-size: 20px;
+    background-color: lightblue;
+    color: snow;
   }
   
 .project a {
     border-radius: 50px 50px 0px 0px;
     padding: 20px;
+    width: 100%;
+    align-items: center;
   }
   
 .project p {
     text-align: center;
   }
-  
-.project img {
+
+
+.project > img {
     width: 100%;
   }
 
@@ -158,7 +156,7 @@ h2 {
   }
 
     /* For responsive layout - added media query for a 2 column layout instead of 4 column layout. */
-@media screen and (max-width: 1182px) {
+@media screen and (max-width: 992px) {
     header {
         flex-direction: column;
     }
@@ -169,7 +167,7 @@ h2 {
     }
 
     .project {
-        width: 100%;
+        width: 50%;
     }
 }
 
